feat: always show google account picker on login

--- a/public/sentiment.html
+++ b/public/sentiment.html
@@ -647,6 +647,10 @@
                 const { error } = await supabaseClient.auth.signInWithOAuth({
                     provider: 'google',
                     options: {
+                        queryParams: {
+                            prompt: 'select_account',
+                            access_type: 'offline',
+                        },
                         redirectTo: window.location.origin + '/sentiment.html'
                     }
                 });
