--- a/public/index.html
+++ b/public/index.html
@@ -1216,6 +1216,10 @@
                 const { error } = await supabaseClient.auth.signInWithOAuth({
                     provider: 'google',
                     options: {
+                        queryParams: {
+                            prompt: 'select_account',
+                            access_type: 'offline',
+                        },
                         redirectTo: window.location.origin
                     }
                 });
