--- a/public/index.html
+++ b/public/index.html
@@ -1315,10 +1315,43 @@
             }
         }
 
+        if (loginButton) {
+            loginButton.addEventListener('click', async () => {
+                console.log("Login button clicked.");
+                if (!supabaseClient) {
+                    alert("Supabase configuration missing.");
+                    return;
+                }
+                
+                const { error } = await supabaseClient.auth.signInWithOAuth({
+                    provider: 'google',
+                    options: {
+                        queryParams: {
+                            prompt: 'select_account',
+                            access_type: 'offline',
+                        },
+                        redirectTo: window.location.origin
+                    }
+                });
+                if (error) {
+                    console.error('OAuth Login Error:', error.message);
+                    alert("Login failed: " + error.message);
+                }
+            });
+        }
+
         if (logoutButtonDropdown) {
             logoutButtonDropdown.addEventListener('click', async () => {
+                console.log("Logout button clicked.");
                 const { error } = await supabaseClient.auth.signOut();
-                if (!error) updateAuthState();
+                if (error) {
+                    console.error('Logout Error:', error.message);
+                } else {
+                    console.log("Logout successful.");
+                    profileDropdown.classList.add('hidden');
+                    // Force UI update or refresh
+                    window.location.reload(); 
+                }
             });
         }
 
