--- a/public/index.html
+++ b/public/index.html
@@ -185,7 +185,7 @@
                         <div class="flex flex-col gap-4">
                             <div class="flex flex-col gap-1">
                                 <h5 class="font-bold dark:text-white" data-i18n="subscribe">구독하기</h5>
-                                <p class="text-xs text-[#49699c] dark:text-slate-400">구독을 통해 더 상세한 분석과 리포트를 받아보세요.</p>
+                                <p class="text-xs text-[#49699c] dark:text-slate-400" data-i18n="subscription-benefit">구독 시 일 1~2회 시장 지표 및 인공지능 분석 리포트를 이메일로 보내드립니다.</p>
                             </div>
                             <a href="https://pola.so" target="_blank" class="w-fit px-6 py-2.5 bg-primary text-white text-sm font-black rounded-lg hover:opacity-90 transition-opacity flex items-center gap-2">
                                 <span class="material-symbols-outlined text-sm">stars</span>
@@ -420,11 +420,11 @@
 <p class="max-w-md text-xs leading-relaxed dark:text-white" data-i18n="fng-theory">The Fear &amp; Greed Index is a way to gauge stock market movements and whether stocks are fairly priced. The theory is based on the logic that excessive fear tends to drive down share prices, and too much greed tends to have the opposite effect.</p>
 </div>
 <div class="flex gap-4">
-    <a href="/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
-    <span class="material-symbols-outlined text-[18px] dark:text-white">policy</span>
-                            <span data-i18n="privacy-policy">개인정보처리방침</span>
-                        </a>
-    </div>
+    <a href="/about.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="about-us">서비스 소개</a>
+    <a href="/terms.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="terms-of-service">이용약관</a>
+    <a href="/privacy.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="privacy-policy">개인정보처리방침</a>
+    <a href="/refund.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="refund-policy">환불정책</a>
+</div>
 
 </div>
 </footer>
