--- a/public/about.html
+++ b/public/about.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="about-us">서비스 소개 - anse</title>
-<meta name="description" content="안세(anse)의 정체성과 가치에 대해 소개합니다." data-i18n="about-intro-desc"/>
+<title data-i18n="about-us">서비스 소개 - anse.ai</title>
+<meta name="description" content="anse.ai 정체성과 가치에 대해 소개합니다." data-i18n="about-intro-desc"/>
 <link rel="canonical" href="https://anse.ai.kr/about.html"/>
 
-<meta property="og:title" content="서비스 소개 - anse" data-i18n="about-us"/>
-<meta property="og:description" content="안세(anse)의 정체성과 가치에 대해 소개합니다." data-i18n="about-intro-desc"/>
+<meta property="og:title" content="서비스 소개 - anse.ai" data-i18n="about-us"/>
+<meta property="og:description" content="anse.ai의 정체성과 가치에 대해 소개합니다." data-i18n="about-intro-desc"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/about.html"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
@@ -67,7 +67,7 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융시장 심리</a>
 </div>
 </div>
 <div class="flex flex-wrap items-center justify-end gap-2 md:gap-4">
@@ -104,7 +104,7 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융시장 심리</a>
 </nav>
 </div>
 </header>
@@ -165,11 +165,9 @@
             <h1 class="text-3xl font-black mb-8 dark:text-white" data-i18n="about-us">서비스 소개</h1>
             
             <section class="mb-12">
-                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="about-intro-title">안세(anse)의 정체성</h2>
+                <h2 class="text-xl font-bold mb-4 dark:text-white" data-i18n="about-intro-title">anse.ai의 정체성</h2>
                 <p class="leading-relaxed" data-i18n="about-intro-desc">
-                    안세(anse)는 'Ant's Sense' 혹은 '개미의 서재'의 의미를 담고 있습니다. 
-                    복잡한 금융 데이터 속에서 개인 투자자(개미)들이 시장의 심리를 직관적으로 파악하고, 
-                    인공지능의 도움을 받아 더 현명한 투자 결정을 내릴 수 있도록 돕는 디지털 서재이자 나침반입니다.
+                    anse.ai는 복잡한 금융 데이터 속에서 개인 투자자(개미)들이 시장의 심리를 직관적으로 파악하고, 인공지능의 도움을 받아 더 현명한 투자 결정을 내릴 수 있도록 돕는 디지털 조력자입니다.
                 </p>
             </section>
 
@@ -198,7 +196,7 @@
         <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
             <div class="flex flex-col gap-2">
                 <p class="text-sm font-medium dark:text-white" data-i18n="about-us">About Us</p>
-                <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="about-intro-desc">안세(anse)의 정체성과 가치에 대해 소개합니다.</p>
+                <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="about-intro-desc">anse.ai의 정체성과 가치에 대해 소개합니다.</p>
             </div>
             <div class="flex gap-4">
                 <a href="/about.html" class="text-xs font-bold text-primary" data-i18n="about-us">서비스 소개</a>
