--- a/public/privacy.html
+++ b/public/privacy.html
@@ -3,11 +3,11 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="privacy-policy">개인정보처리방침 - anse</title>
+<title data-i18n="privacy-policy">개인정보처리방침 - anse.ai</title>
 <meta name="description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다." data-i18n="privacy-intro"/>
 <link rel="canonical" href="https://anse.ai.kr/privacy.html"/>
 
-<meta property="og:title" content="개인정보처리방침 - anse" data-i18n="privacy-policy"/>
+<meta property="og:title" content="개인정보처리방침 - anse.ai" data-i18n="privacy-policy"/>
 <meta property="og:description" content="본 웹사이트의 개인정보처리방침에 대해 안내합니다." data-i18n="privacy-intro"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/privacy.html"/>
@@ -67,7 +67,7 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융시장 심리</a>
 </div>
 </div>
 <div class="flex flex-wrap items-center justify-end gap-2 md:gap-4">
@@ -104,7 +104,7 @@
 <div id="mobile-menu" class="md:hidden hidden bg-white/80 dark:bg-background-dark/80 backdrop-blur-md pb-4 border-b border-solid border-[#e7ecf4] dark:border-[#1e293b]">
 <nav class="flex flex-col items-center gap-4 py-2">
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융시장 심리</a>
 </nav>
 </div>
 </header>
