--- a/public/terms.html
+++ b/public/terms.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title data-i18n="terms-of-service">이용약관 - anse</title>
-<meta name="description" content="anse 서비스 이용약관 및 면책조항에 대해 안내합니다." data-i18n="terms-section-1-d"/>
+<title data-i18n="terms-of-service">이용약관 - anse.ai</title>
+<meta name="description" content="anse.ai 서비스 이용약관 및 면책조항에 대해 안내합니다." data-i18n="terms-section-1-d"/>
 <link rel="canonical" href="https://anse.ai.kr/terms.html"/>
 
-<meta property="og:title" content="이용약관 - anse" data-i18n="terms-of-service"/>
-<meta property="og:description" content="anse 서비스 이용약관 및 면책조항에 대해 안내합니다." data-i18n="terms-section-1-d"/>
+<meta property="og:title" content="이용약관 - anse.ai" data-i18n="terms-of-service"/>
+<meta property="og:description" content="anse.ai 서비스 이용약관 및 면책조항에 대해 안내합니다." data-i18n="terms-section-1-d"/>
 <meta property="og:type" content="website"/>
 <meta property="og:url" content="https://anse.ai.kr/terms.html"/>
 <meta property="og:image" content="https://anse.ai.kr/images/neutral.png"/>
@@ -67,7 +67,7 @@
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
-<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html" data-i18n="nav-us">미국 금융시장 심리</a>
 </div>
 </div>
 <div class="flex flex-wrap items-center justify-end gap-2 md:gap-4">
