--- a/public/about.html
+++ b/public/about.html
@@ -63,7 +63,7 @@
 <div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary shrink-0">
 <span class="material-symbols-outlined text-[20px] text-white">leaderboard</span>
 </div>
-<h2 class="text-lg font-bold tracking-tight dark:text-white">anse</h2>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">anse.ai</h2>
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
