--- a/public/terms.html
+++ b/public/terms.html
@@ -63,7 +63,7 @@
 <div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary shrink-0">
 <span class="material-symbols-outlined text-[20px] text-white">leaderboard</span>
 </div>
-<h2 class="text-lg font-bold tracking-tight dark:text-white">anse</h2>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">anse.ai/h2>
 </div>
 <div class="hidden md:flex items-center gap-6"> <!-- Desktop Nav -->
 <a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html" data-i18n="nav-korea">한국 금융시장 심리</a>
@@ -184,7 +184,7 @@
                 <p class="font-bold mb-4" data-i18n="disclaimer-desc">본 서비스가 제공하는 모든 정보는 투자 참고용이며, 투자 권유나 종목 추천이 아닙니다.</p>
                 <ul class="list-disc pl-6 space-y-2 text-sm text-slate-600 dark:text-slate-400">
                     <li data-i18n="disclaimer-li1">서비스에서 제공하는 지표와 AI 분석 결과는 데이터 제공처의 오류나 지연으로 인해 실제 시장 상황과 다를 수 있습니다.</li>
-                    <li data-i18n="disclaimer-li2">모든 투자의 책임은 투자자 본인에게 있으며, 'anse'는 본 서비스의 정보를 이용한 투자 결과에 대해 어떠한 법적 책임도 지지 않습니다.</li>
+                    <li data-i18n="disclaimer-li2">모든 투자의 책임은 투자자 본인에게 있으며, 'anse.ai'는 본 서비스의 정보를 이용한 투자 결과에 대해 어떠한 법적 책임도 지지 않습니다.</li>
                     <li data-i18n="disclaimer-li3">본 서비스는 과거의 데이터를 기반으로 한 분석을 포함하며, 이는 미래의 수익을 보장하지 않습니다.</li>
                 </ul>
             </section>
@@ -196,7 +196,7 @@
         <div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
             <div class="flex flex-col gap-2">
                 <p class="text-sm font-medium dark:text-white" data-i18n="terms-of-service">Terms of Service</p>
-                <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="terms-section-1-d">anse 서비스 이용약관 및 면책조항에 대해 안내합니다.</p>
+                <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="terms-section-1-d">anse.ai 서비스 이용약관 및 면책조항에 대해 안내합니다.</p>
             </div>
             <div class="flex gap-4">
                 <a href="/about.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="about-us">서비스 소개</a>
