--- a/public/terms.html
+++ b/public/terms.html
@@ -198,7 +198,8 @@
                 <p class="text-sm font-medium dark:text-white" data-i18n="terms-of-service">Terms of Service</p>
                 <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="terms-section-1-d">anse.ai 서비스 이용약관 및 면책조항에 대해 안내합니다.</p>
             </div>
-            <div class="flex gap-4">
+            <div class="flex flex-wrap gap-4">
+                <span class="text-xs font-bold text-[#49699c] dark:text-slate-400" data-i18n="contact-us">Contact: info@anse.ai.kr</span>
                 <a href="/about.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="about-us">서비스 소개</a>
                 <a href="/terms.html" class="text-xs font-bold text-primary" data-i18n="terms-of-service">이용약관</a>
                 <a href="/privacy.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="privacy-policy">개인정보처리방침</a>
