--- a/public/index.html
+++ b/public/index.html
@@ -419,7 +419,8 @@
 <p class="text-sm font-medium dark:text-white" data-i18n="footer-desc-korea">Data provided by KRX (Korea Exchange) and KOFIA.</p>
 <p class="max-w-md text-xs leading-relaxed dark:text-white" data-i18n="fng-theory">The Fear &amp; Greed Index is a way to gauge stock market movements and whether stocks are fairly priced. The theory is based on the logic that excessive fear tends to drive down share prices, and too much greed tends to have the opposite effect.</p>
 </div>
-<div class="flex gap-4">
+<div class="flex flex-wrap gap-4">
+    <span class="text-xs font-bold text-[#49699c] dark:text-slate-400" data-i18n="contact-us">Contact: info@anse.ai.kr</span>
     <a href="/about.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="about-us">서비스 소개</a>
     <a href="/terms.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="terms-of-service">이용약관</a>
     <a href="/privacy.html" class="text-xs font-bold text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" data-i18n="privacy-policy">개인정보처리방침</a>
