--- a/public/refund.html
+++ b/public/refund.html
@@ -192,7 +192,8 @@
                 <p class="text-sm font-medium dark:text-white" data-i18n="refund-policy">Refund Policy</p>
                 <p class="max-w-md text-xs leading-relaxed dark:text-slate-400" data-i18n="refund-section-1-d">anse 서비스 환불 규정에 대해 안내합니다.</p>
             </div>
-            <div class="flex gap-4">
+            <div class="flex flex-wrap gap-4">
+                <span class="text-xs font-bold text-[#49699c] dark:text-slate-400" data-i18n="contact-us">Contact: info@anse.ai.kr</span>
                 <a href="/about.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="about-us">서비스 소개</a>
                 <a href="/terms.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="terms-of-service">이용약관</a>
                 <a href="/privacy.html" class="text-xs font-bold hover:text-primary transition-colors" data-i18n="privacy-policy">개인정보처리방침</a>
