--- a/public/about.html
+++ b/public/about.html
@@ -260,28 +260,89 @@
     if (closeModal) closeModal.addEventListener('click', () => accountModal.classList.add('hidden'));
     if (accountModal) accountModal.addEventListener('click', (e) => { if (e.target === accountModal) accountModal.classList.add('hidden'); });
 
-    async function updateAuthState() {
-        if (!supabaseClient) return;
-        try {
-            const { data: { user } } = await supabaseClient.auth.getUser();
-            if (user) {
-                loginButton.classList.add('hidden');
-                userProfile.classList.remove('hidden');
-                const avatarUrl = user.user_metadata.avatar_url;
-                if (avatarUrl) {
-                    userAvatar.style.backgroundImage = `url('${avatarUrl}')`;
-                    document.getElementById('modal-user-avatar').style.backgroundImage = `url('${avatarUrl}')`;
+        async function updateAuthState() {
+            if (!supabaseClient) return;
+            try {
+                const { data: { user } } = await supabaseClient.auth.getUser();
+                if (user) {
+                    loginButton.classList.add('hidden');
+                    userProfile.classList.remove('hidden');
+                    const avatarUrl = user.user_metadata.avatar_url;
+                    if (avatarUrl) {
+                        userAvatar.style.backgroundImage = `url('${avatarUrl}')`;
+                        document.getElementById('modal-user-avatar').style.backgroundImage = `url('${avatarUrl}')`;
+                    }
+                    document.getElementById('dropdown-user-name').textContent = user.user_metadata.full_name || 'User';
+                    document.getElementById('dropdown-user-email').textContent = user.email;
+                    document.getElementById('modal-user-name').textContent = user.user_metadata.full_name || 'User';
+                    document.getElementById('modal-user-email').textContent = user.email;
+
+                    // 구독 상태 체크
+                    checkSubscriptionStatus(user.id);
+                } else {
+                    loginButton.classList.remove('hidden');
+                    userProfile.classList.add('hidden');
                 }
-                document.getElementById('dropdown-user-name').textContent = user.user_metadata.full_name || 'User';
-                document.getElementById('dropdown-user-email').textContent = user.email;
-                document.getElementById('modal-user-name').textContent = user.user_metadata.full_name || 'User';
-                document.getElementById('modal-user-email').textContent = user.email;
-            } else {
-                loginButton.classList.remove('hidden');
-                userProfile.classList.add('hidden');
-            }
-        } catch (err) { }
-    }
+            } catch (err) { }
+        }
+
+        async function checkSubscriptionStatus(userId) {
+            const statusText = document.getElementById('subscription-status-text');
+            const subscribeBtn = document.getElementById('subscribe-btn');
+            const cancelBtn = document.getElementById('cancel-subscription-btn');
+            if (!statusText || !subscribeBtn || !cancelBtn) return;
+            try {
+                const { data } = await supabaseClient.from('subscriptions').select('status').eq('user_id', userId).maybeSingle();
+                if (data && data.status === 'active') {
+                    statusText.innerHTML = '<span class="text-emerald-500 font-black">구독 중</span> (매일 리포트가 발송됩니다)';
+                    subscribeBtn.classList.add('hidden');
+                    cancelBtn.classList.remove('hidden');
+                } else {
+                    statusText.textContent = i18n.translate("subscription-benefit");
+                    subscribeBtn.classList.remove('hidden');
+                    cancelBtn.classList.add('hidden');
+                }
+            } catch (err) { }
+        }
+
+        document.getElementById('subscribe-btn')?.addEventListener('click', async () => {
+            const { data: { user } } = await supabaseClient.auth.getUser();
+            if (!user) return alert("로그인이 필요합니다.");
+            const btn = document.getElementById('subscribe-btn');
+            btn.disabled = true;
+            const originalText = btn.innerHTML;
+            btn.textContent = "연결 중...";
+            try {
+                const response = await fetch('/api/create-checkout', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ user_id: user.id, user_email: user.email })
+                });
+                const result = await response.json();
+                if (result.url) window.location.href = result.url;
+                else alert("결제 페이지를 불러오지 못했습니다.");
+            } catch (err) { alert("오류가 발생했습니다."); }
+            finally { btn.disabled = false; btn.innerHTML = originalText; }
+        });
+
+        document.getElementById('cancel-subscription-btn')?.addEventListener('click', async () => {
+            if (!confirm("정말 구독을 취소하시겠습니까?")) return;
+            const { data: { user } } = await supabaseClient.auth.getUser();
+            const btn = document.getElementById('cancel-subscription-btn');
+            btn.disabled = true;
+            btn.textContent = "처리 중...";
+            try {
+                const response = await fetch('/api/cancel-subscription', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ user_id: user.id })
+                });
+                const result = await response.json();
+                if (result.success) { alert("구독이 취소되었습니다."); window.location.reload(); }
+                else alert("취소 실패.");
+            } catch (err) { alert("오류 발생."); }
+            finally { btn.disabled = false; btn.textContent = "구독 취소"; }
+        });
     if (loginButton) {
         loginButton.addEventListener('click', async () => {
             await supabaseClient.auth.signInWithOAuth({
